2008-01-17  Sam Steingold  <sds@gnu.org>

	* pathname.d (open_file): fix a gc-safety bug in (open
	... :direction :output :if-exists :rename-and-delete)
	by keeping namestring on the STACK all along

2008-01-16  Sam Steingold  <sds@gnu.org>

	* pathname.d (open_file): fix G++ compilation
	* charstrg.d (uc_width): remove the global inline declaration of
	the gnulib function to avoid a G++ warning

2008-01-16  Sam Steingold  <sds@gnu.org>

	* ariarm.d, lispbibl.d: convert comments from "# " to "/**/"

2008-01-16  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_function_to_foreign, convert_from_foreign)
	(convert_from_foreign_array_fill, convert_to_foreign, %ELEMENT):
	use while instead of dotimes and do/while instead of dotimesp
	(%ELEMENT): avoid GCC "warning: value computed is not used"

2008-01-16  Sam Steingold  <sds@gnu.org>

	* list.d (make_list, NTHCDR, listof, LIST*, APPEND, NCONC, NBUTLAST):
	use while instead of dotimes and do/while instead of dotimesp

2008-01-16  Sam Steingold  <sds@gnu.org>

	* sequence.d (REDUCE): use missingp
	(CONCATENATE, seq_boolop, MAP, MAP-INTO, delete_help, substitute_help):
	use while instead of dotimes and do/while instead of dotimesp
	(verify_return_value, VERIFY_RETURN_VALUE): add function & macro
	(MAKE-SEQUENCE, coerce_sequence, COERCED-SUBSEQ, CONCATENATE, MAP)
	(MERGE): use them
	(CONCATENATE, seq_boolop, MAP): avoid GCC
	"warning: value computed is not used"

2008-01-16  Reini Urban  <rurban@x-ray.at>

	<34_trans3>
	* sequence.d, list.d: translate all comments and convert them to /**/

2008-01-15  Sam Steingold  <sds@gnu.org>

	* debug.d (climb_stack_once, climb_stack_repeat): merge into climb_stack
	(FRAME-UP-1, FRAME-DOWN-1): remove
	(FRAME-UP, FRAME-DOWN): accept an additional REPEAT argument
	* reploop.lisp (frame-limit-down, frame-limit-up, debug-up)
	(debug-top, debug-down, debug-bottom, frame-up-down):
	use (frame-up 1 ...) instead of (frame-up-1 ...)
	and (frame-down 1 ...) instead of (frame-down-1 ...)